2006-02-13  Mo DeJong  <mdejong@users.sourceforge.net>

        Add TJC::compile command to support runtime
        compilation of Tcl procs. Compilation is
        implemented using the TJC compiler and an
        embedded Java compiler called Janino.

        * Makefile.in: Add build support for Janino compiler.
        The compiler is BSD licensed and is included directly
        in the Jacl source tree so that it is installed
        along with Jacl.
        * docs/TJC/tjcpkg.html: Add TJC::compile documentation.
        * src/jacl/tcl/lang/TclObject.java (toString): Work
        around a pizza and janino compiler bug having to do
        with a superclass that can't be accessed outside the package.
        * src/janino/README.TXT: Add text file that describes
        the Janino compiler source.
        * src/janino/org/codehaus/janino/Access.java:
        * src/janino/org/codehaus/janino/AstCompilationUnitGenerator.java:
        * src/janino/org/codehaus/janino/AstGeneratorVisitor.java:
        * src/janino/org/codehaus/janino/ByteArrayClassLoader.java:
        * src/janino/org/codehaus/janino/CachingJavaSourceClassLoader.java:
        * src/janino/org/codehaus/janino/ClassBodyEvaluator.java:
        * src/janino/org/codehaus/janino/ClassFileIClass.java:
        * src/janino/org/codehaus/janino/ClassLoaderIClassLoader.java:
        * src/janino/org/codehaus/janino/CodeContext.java:
        * src/janino/org/codehaus/janino/CompileException.java:
        * src/janino/org/codehaus/janino/Compiler.java:
        * src/janino/org/codehaus/janino/DebuggingInformation.java:
        * src/janino/org/codehaus/janino/Descriptor.java:
        * src/janino/org/codehaus/janino/EvaluatorBase.java:
        * src/janino/org/codehaus/janino/ExpressionEvaluator.java:
        * src/janino/org/codehaus/janino/FilterWarningHandler.java:
        * src/janino/org/codehaus/janino/IClass.java:
        * src/janino/org/codehaus/janino/IClassLoader.java: